<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alumaworks.udayanga.diseaseanalytic.LogingActivity"
    style="@style/background"
    android:gravity="center_vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">
                <TextView style="@style/other_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_view_log_in_user_name"
                    android:id="@+id/textUserName"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextUserName" android:hint="@string/edit_text_log_in_user_name"
                    style="@style/editText" />
                <TextView style="@style/other_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_view_log_in_password"
                    android:id="@+id/textPassword"/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editTextPassword" android:hint="@string/edit_text_log_in_password"
                    style="@style/editText" />

                <ProgressBar
                    android:layout_width="match_parent"
                    android:id="@+id/progressBar"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"></ProgressBar>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:id="@+id/layoutButton" android:paddingTop="15dp"
                    android:dividerPadding="20dp"
                    android:paddingBottom="15dp">
                    <Button style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_log_in_login"
                        android:id="@+id/buttonLogin"
                        android:onClick="onClickLoginButton"
                        android:elegantTextHeight="true" />
                    <Button style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_log_in_sign_up"
                        android:id="@+id/buttonSignUp"
                        android:onClick="onClickSignUpButton" />


                </LinearLayout>
            </LinearLayout>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
