<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/background">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:padding="5dp">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">
<!--
                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                    android:layout_height="195dp" android:id="@+id/map" tools:context=".MapsActivity"
                    android:name="com.google.android.gms.maps.SupportMapFragment" />
-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="New Text"
                            android:id="@+id/user_name" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_view_map_latitde"
                            android:id="@+id/textView2"
                            style="@style/other_txt" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editLattitude"
                            android:hint="@string/edit_text_map_latitude"
                            android:layout_weight="0.50"
                            android:enabled="false"
                            style="@style/editText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_view_map_longitude"
                            android:id="@+id/textView6"
                            style="@style/other_txt" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editTextLongitude"
                            android:hint="@string/edit_text_map_longitude"
                            android:layout_weight="0.45"
                            android:enabled="false"
                            style="@style/editText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_view_map_city"
                            android:id="@+id/textView7"
                            style="@style/other_txt" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_text_map_city"
                            android:id="@+id/cityName"
                            style="@style/editText" />

                        <ProgressBar
                            android:layout_width="match_parent"
                            android:id="@+id/progressBar"
                            android:layout_height="wrap_content"
                            android:indeterminate="false"></ProgressBar>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_map_get"
                            android:id="@+id/buttonGetLocation"
                            android:onClick="onGetLocationButtonClickListner"
                            style="@style/button" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView8" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/spinner"
                            style="@style/editText" />

                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ratingBar" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_map_send"
                            android:id="@+id/buttonSendLocation"
                            android:layout_gravity="center_horizontal"
                            android:onClick="onSendButtonClick"
                            style="@style/button" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </TableLayout>
    </ScrollView>


</LinearLayout>